fixed alignement of service boxes in css

--- a/style.css
+++ b/style.css
@@ -158,13 +158,13 @@ nav a {
     width: 80%;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: baseline;
 }
 .serviceboxes > div {
     width: 25%;
 }
 .serviceboxes img {
-    width: 25px;
+    height: 20px;
 }
 .button-create-an-org {
     margin-top: 60px;
